<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FatherLayout"
    android:padding="10dp"
    tools:context=".tela.cadastro.CadastroUsuarioActivity">

    <LinearLayout
        style="@style/ChildLayout"
        android:orientation="vertical">

        <LinearLayout
            style="@style/ChildLayout"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:orientation="vertical">

            <TextView
                style="@style/TextView"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/edit_text_first_name"
                style="@style/EditText"
                android:inputType="textPersonName" />

            <TextView
                style="@style/TextView"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/edit_text_last_name"
                style="@style/EditText"
                android:inputType="textPersonName" />

            <TextView
                style="@style/TextView"
                android:text="@string/username" />

            <EditText
                android:id="@+id/edit_text_username"
                style="@style/EditText"
                android:inputType="text" />

            <TextView
                style="@style/TextView"
                android:text="@string/cellphone_number" />

            <EditText
                android:id="@+id/edit_text_user_telefone"
                style="@style/EditText"
                android:inputType="number|phone"
                android:maxLength="19"
                />

            <TextView
                style="@style/TextView"
                android:text="@string/password" />

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

                <EditText
                    android:id="@+id/edit_text_password"
                    style="@style/EditText"
                    android:inputType="textPassword"
                    android:longClickable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextView"
                android:text="@string/confirm_password" />

            <com.google.android.material.textfield.TextInputLayout style="@style/TextInputLayout">

                <EditText
                    android:id="@+id/edit_text_confirm_password"
                    style="@style/EditText"
                    android:inputType="textPassword"
                    android:longClickable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextView"
                android:text="@string/email" />

            <EditText
                android:id="@+id/edit_text_email"
                style="@style/EditText"
                android:inputType="textEmailAddress"
                android:longClickable="false"/>

            <TextView
                style="@style/TextView"
                android:text="@string/confirm_email" />

            <EditText
                android:id="@+id/edit_text_confirm_email"
                style="@style/EditText"
                android:inputType="textEmailAddress"
                android:longClickable="false"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_save_user"
            style="@style/Button"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>